KFSMI-1372 KULRICE-2262